# Projeto_Turnover_colaboradores

./: .gitignore  README.md  pyproject.toml
01_Dados/Dados_processados_limpos/: Dados_processados.xlsx
05_Documentacao/02_Arquivos_doc_pdf/: Projeto Turnover de colaboradores.docx
